[package]
name = "massa_smt_bench"
version = "0.1.0"
edition = "2021"

[dependencies]
sparse-merkle-tree = "0.6.1"
cw-merkle-tree = "0.2.0"
lsmtree = "0.1.1"
criterion = "0.4.0"

[dependencies.monotree]
version = "0.1.4"
features = ["db_rocksdb", "db_sled"]

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "my_benchmark"
harness = false
