[package]
name = "massa_smt_bench"
version = "0.1.0"
edition = "2021"

[dependencies]
sparse-merkle-tree = "0.6.1"
lsmtree = "0.1.1"
criterion = "0.4.0"
blake3 = "1.3.3"
rocksdb = "0.20.1"
rand = "0.8.5"

[dependencies.monotree]
version = "0.1.4"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "my_benchmark"
harness = false
